--- a/Salesstatic/AndroidManifest.xml
+++ b/Salesstatic/AndroidManifest.xml
@@ -47,6 +47,14 @@
             android:windowSoftInputMode="stateHidden"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
+        
+        <activity
+            android:name="SearchActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
     </application>
 
 </manifest>
